Magpie 3.0
----------

Magpie 3.0 includes some new software support, but primarily removes a
lot of older support.

Update default MAGPIE_PYTHON to python3.

Legacy support Removed
- Spark 0.9.X support
- Hbase 0.98.X and 0.99.X support
- Mahout

Backwards Compatibility Notes
- Remove legacy support for HADOOP_SLAVE_COUNT and
  HADOOP_SLAVE_CORE_COUNT.  HADOOP_WORKER_COUNT and
  HADOOP_WORKER_CORE_COUNT should be used.
- SPARK_JOB_CLASSPATH, SPARK_JOB_LIBRARY_PATH, and SPARK_JOB_JAVA_OPTS
  environment variables are removed.  Users should use
  --driver-class-path, --driver-library-path, and
  --driver-java-options in spark-submit instead.
- Remove legacy support of STORM_WORKERS_COUNT (plural), users should
  use STORM_WORKER_COUNT.

Magpie 2.6
----------
Support Hadoop 3.1.4, 3.2.2, 3.3.0, 3.3.1
- Update Hadoop default to 3.3.1
Support Spark 3.0.3-bin-hadoop2.7, 3.0.3-bin-hadoop3.2,
  Spark 3.0.2-bin-hadoop2.7, 3.0.2-bin-hadoop3.2,
  Spark 3.0.1-bin-hadoop2.7, 3.0.1-bin-hadoop3.2,
  Spark 2.4.7-bin-hadoop2.6, 2.4.7-bin-hadoop2.7,
  Spark 2.4.8-bin-hadoop2.6, 2.4.8-bin-hadoop2.7
- Update Spark default to 3.0.3-bin-hadoop3.2
- Misc fixes
- Documentation updates

Magpie 2.5
----------
Add Alluxio support.
Support Spark 3.0.0-bin-hadoop2.7, 3.0.0-bin-hadoop3.2,
  Spark 2.4.6-bin-hadoop2.6, 2.4.6-bin-hadoop2.7
- Update Spark default to 3.0.0-bin-hadoop3.2
Support Hbase 1.2.7, 1.3.3, 1.3.4, 1.3.5, 1.5.0, 1.6.0.
- Update Hbase default to 1.6.0

Magpie 2.4
----------
Support Hadoop 3.1.3, 3.2.1
- Update Hadoop default to 3.2.1
Add support for Storm 1.2.3.
- Update default Storm to 1.2.3.
Add support for Hbase 1.4.10, 1.4.13
- Update default Hbase to 1.4.10, 1.4.13
Add support for Zeppelin 0.8.2.
- Update default Zeppelin to 0.8.2.
Support Spark 2.3.3-bin-hadoop2.6, 2.3.3-bin-hadoop2.7, Spark
 2.3.4-bin-hadoop2.6, 2.3.4-bin-hadoop2.7, Spark 2.4.5-bin-hadoop2.6,
 2.4.5-bin-hadoop2.7
- Update Spark default to 2.4.4-bin-hadoop2.7

Magpie 2.3
----------