@@ -131,8 +131,8 @@ then
     then
         export SPARK_MASTER_PORT=${default_spark_master_port}
     fi
-    export SPARK_SLAVE_COUNT=`cat ${SPARK_CONF_DIR}/slaves|wc -l`
-    export SPARK_SLAVE_CORE_COUNT=`expr ${magpie_worker_core_count} \* ${SPARK_SLAVE_COUNT}`
+    export SPARK_WORKER_COUNT=`cat ${SPARK_CONF_DIR}/slaves|wc -l`
+    export SPARK_WORKER_CORE_COUNT=`expr ${magpie_worker_core_count} \* ${SPARK_WORKER_COUNT}`
 fi
 
 if [ "${KAFKA_SETUP}" == "yes" ]
